[package]
name = "hexfloat2"
version = "0.1.2"
edition = "2021"
description = "Parse and format IEEE754 floating point hexadecimal syntax"
keywords = ["hexfloat", "float"]
categories = ["encoding", "parser-implementations"]
repository = "https://github.com/ericseppanen/hexfloat2"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
rust-version = "1.67"

[dependencies]
